--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ output: html_document
 
 ## Introduction
 
-The shiny app under development allows a user to enter some basic information about their vehicle, and obtain a prediction for its MPG.  The app relies on a simple GLM algorithm and a data set "auto MPG" from the UCI Machine Learning Repository located [here](http://bit.ly/1sgiKaS).
+- The shiny app under development allows a user to enter some basic information about their vehicle, and obtain a prediction for its MPG.  The app relies on a simple GLM algorithm and a data set "auto MPG" from the UCI Machine Learning Repository located [here](http://bit.ly/1sgiKaS).
 
 
 ---
@@ -23,32 +23,33 @@ mpg <- getURL("https://docs.google.com/spreadsheets/d/12s5WVmzalqI4rwVkahBrtewMx
 mpg <- read.csv(text = mpg)
 modFit <- train(mpg ~ cyl + disp + horse + weight + accel + year + origin, method="glm", data=mpg)
 ```
-The simple GLM model has a $RMSE$ of 3.35, and an $R^2$ of 0.818.  While other more complex algorithms were implemented, they yielded small improvements at the cost of much longer execution times so the GLM model was chosen as the backbone of the shiny app.
+- The simple GLM model has a $RMSE$ of 3.35, and an $R^2$ of 0.818.  While other more complex algorithms were implemented, they yielded small improvements at the cost of much longer execution times so the GLM model was chosen as the backbone of the shiny app.
 
 
 ---
 
 ## Algorithm Predictions
 
-https://docs.google.com/drawings/d/196fJ9wrgnmvymhe4BD9OhnYNTpCZtdERW22o6kcc5Ck/pub?w=1440&h=1080
+<a href="http://tinypic.com?ref=so8eab" target="_blank"><img src="http://i58.tinypic.com/so8eab.png" border="0" alt="Image and video hosting by TinyPic"></a>
+
+
 ***
-The relative 45 degree line shape of this simple plot of actual vs. predicted MPG values demonstrates the simple GLM's decent fit.
+- The relative 45 degree line shape of this simple plot of actual vs. predicted MPG values demonstrates the simple GLM's decent fit.
 
 
 ---
 
 ## Shiny App
 
-https://docs.google.com/drawings/d/1XTBEE8WpXXccg4BbWT7vs1ZMIDvHkRtGCAaV4wpbg6w/pub?w=1440&h=1080
+<a href="http://tinypic.com?ref=i4mm8j" target="_blank"><img src="http://i62.tinypic.com/i4mm8j.png" border="0" alt="Image and video hosting by TinyPic"></a>
 
 ***
-This is a screenshot of the deployed shiny app.  It was tested and worked for various combinations of numeric inputs. It is available [here](https://acql.shinyapps.io/devdatapdt/).
+- This is a screenshot of the deployed shiny app.  It was tested and worked for various combinations of numeric inputs. It is available [here](https://acql.shinyapps.io/devdatapdt/).
 
-<!--
 ---
 
-## Conclusions
+## Conclusion
 
 - This app provides a clear, easy to use and effective interface to predict the value of different vehicles's MPG.
 
--->
+
